--- a/docs/sherpa.css
+++ b/docs/sherpa.css
@@ -1,10 +1,41 @@
 body {
-	font-family: "Helvetica Neue","Roboto",Helvetica,Arial,sans-serif;";
+	font-family: "Ubuntu",sans-serif;
 }
 
 main a, main a:link, main a:active, main a:visited {
 	color: #2276a1;
 }
+
+.md-nav {
+    font-size: 14px;
+    line-height: 1.3;
+}
+
+.md-nav__link {
+    display: block;
+    margin-bottom: 20px;
+    -webkit-transition: color .125s;
+    transition: color .125s;
+    text-overflow: ellipsis;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+.md-nav__title {
+    display: block;
+    margin-bottom: 20px;
+    padding: 0 .6rem;
+    font-weight: 700;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.md-typeset {
+    font-size: 14px;
+    line-height: 1.6;
+    -webkit-print-color-adjust: exact;
+}
+
 .md-header {
 	background: linear-gradient(175deg, #4B9AA6 0%, #31698E 61%, #1C2B4A 100%);
 }
